# OASIS

./: # OASIS API Authentication Flow - Comple.md  .dockerignore  .gitbook.yaml  .gitignore  .gitmodules  .oasis_sln_list.txt  .railwayignore  42_CHAIN_INTEGRATION_ROADMAP.md  ADDING_BRIDGE_SUPPORT_TO_PROVIDERS.md  AGENTS.md  AGENT_A_TASKS_CORE_INFRASTRUCTURE.md  AGENT_BRIEFS.md  AGENT_BRIEFS_SUMMARY.md  AGENT_B_TASKS_MERCHANT_API.md  AGENT_C_TASKS_ISHIP_INTEGRATION.md  AGENT_D_TASKS_SHIPOX_WEBHOOKS.md  AGENT_E_TASKS_BUSINESS_LOGIC.md  AGENT_F_TASKS_SECURITY_VAULT.md  API_REFERENCE.md  ARBITRUM_BRIDGE_COMPLETION_SUMMARY.md  AUTH_QUICK_START.md  AWS_Credits_Application_Brief.md  AWS_Credits_Application_Description.md  AWS_Credits_Application_Ultra_Brief.txt  Authentication_Process.md  BRIDGE_API_GUIDE.md  BRIDGE_EXPANSION_SESSION_SUMMARY.md  BRIDGE_MIGRATION_COMPLETION_REPORT.md  BRIDGE_MIGRATION_PROGRESS_REPORT.md  BRIDGE_SERVICES_COMPLETE_STATUS.md  BRIDGE_TESTING_GUIDE.md  Base_Blockchain_Integration_Report.md  CONTRACT_DEPLOYMENT.md  CONTRIBUTION_BASED_PARTICIPATION_INFRASTRUCTURE.md  CONTRIBUTION_DASHBOARD_UI_DESIGN.md  COVER_LETTER_FULLSTACK_BACKEND.md  CRITICAL_ISSUE_REPORT.md  CURSOR_SETUP_GUIDE.md  DAVID_BOVILL_42_CHAINS_RESPONSE.md  DEPLOYMENT_COMPLETE.md  (+298 more)
.claude/: launch.json
.cursor/: rules
.devin/: wiki.json
A2A/: ADVANCED_DEMO_IDEAS.md  AI_AGENTS_REQUIREMENTS.md  ANALYSIS_AND_DEMO_PLAN.md  DEMO_INDEX.md  DEMO_PROPOSAL.md  INTEGRATION_INDEX.md  OASIS_AGENT_INTERNET_ARCHITECTURE.md  QUICK_START_DEMO.md  README_OASIS_INTEGRATION.md  TODAYS_SIMPLE_DEMO.md
AI Context/: DEVELOPER_PREFERENCES.md  DEVELOPMENT_CONTEXT.md
AssetRail/: CONTRACTS_SUMMARY.md  ERC_S_STANDARD.md
AssetRail/solana-contracts/programs/dat-integration/: Cargo.toml  Xargo.toml
AssetRail/solana-contracts/programs/dat-integration/src/: lib.rs
AssetRail/solana-contracts/programs/nft-airdrop/: Cargo.toml
AssetRail/solana-contracts/programs/nft-airdrop/src/: lib.rs
Babelfish/: README.md
BillionsHealed/: .gitignore  BILLIONS_HEALED_COMPLETE_ROADMAP.md  CACHE_FIX.md  CACHE_SYSTEM_GUIDE.md  CLOUDFLARE_SETUP.md  CNAME  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  HEROKU_DEPLOY_MANUAL.md  HEROKU_DEPLOY_SIMPLE.md  INTEGRATION_SUMMARY.md  LICENSE  MANUAL_TWEET_REFRESH.md  MOBILE_LAYOUT_OPTIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  RAILWAY_DEPLOY.md  README.md  SURGE_DEPLOY.md  TWITTER_INTEGRATION_GUIDE.md  TWITTER_SETUP_QUICK_START.md  UPDATES.md  deploy.sh  initialize-twitter.sh  start.sh  test-twitter.sh
Docker/: Dockerfile.clean  Dockerfile.star  Dockerfile.star-api  Dockerfile.web10  Dockerfile.web4  Dockerfile.web6  Dockerfile.web7  Dockerfile.web8  Dockerfile.web9  docker-compose.yml  entrypoint.onode.sh  entrypoint.web10.sh  entrypoint.web6.sh  entrypoint.web7.sh  entrypoint.web8.sh  entrypoint.web9.sh
Docs/: ADVISORY_CALL_TODO_JAN_27.md  ADVISORY_GROUP_INTAKE_ANSWERS.md  AGENT_ACTIVATION_FIX_PROCESS.md  AGENT_ACTIVATION_GUIDE.md  AGENT_ACTIVATION_PERSISTENCE_ISSUE.md  AGENT_CREATION_EMPOWERMENT_PROPOSAL.md  AGENT_DEVELOPMENT_WORKFLOW.md  AGENT_FEATURES_COMPLETE.md  AGENT_IMPLEMENTATION_STATUS.md  AGENT_INTEROPERABILITY_HOLONIC_ARCHITECTURE.md  AGENT_MEMORY_CONTRAST_DIAGRAM_BRIEF.md  AGENT_NFT_TRADING_ARCHITECTURE.md  AGENT_PASSWORD_PRESERVATION.md  AGENT_PERSISTENCE_FIX_IMPLEMENTED.md  AGENT_PERSISTENCE_ISSUE_SUMMARY.md  AGENT_TEMPLATES_USING_OASIS_STAR_MCP.md  AGENT_TO_USER_LINKING.md  AGENT_UI_ARCHITECTURE_PROPOSAL.md  AGENT_VERIFICATION_APPROACH_COMPARISON.md  AGENT_VERIFICATION_SIMPLIFIED.md  AI_INFRASTRUCTURE_EXECUTIVE_SUMMARY.md  AI_INFRASTRUCTURE_VISION_AND_METRICS.md  ALL_HANDS_AGENDA_JANUARY_23.md  ALWL_FOUNDATION_MONETISATION_OUTLINE.md  ALWL_LANDING_PAGE_BRIEF.md  ALWL_WORKSHOP_JAN_31_ACTION_ITEMS.md  ANTI_EXPLOITATION_ANALYSIS.md  AR_WORLD_CHARACTER_AI_AGENTS_ANALYSIS.md  AR_WORLD_TOKENIZED_ADVENTURES_INTEGRATION.md  AUTHENTICATION_COMPARISON_NFT_MINTING.md  BASEOASIS_ACTIVATION_FIX.md  BASE_PROVIDER_REFACTORING_SUMMARY.md  (+158 more)
OASISOmniverse/NativeWrapper/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  QUICK_VISUAL_STUDIO_BUILD.md  VISUAL_STUDIO_BUILD_GUIDE.md  star_api.vcxproj
Providers/Blockchain/NextGenSoftware.OASIS.API.Providers.RadixOASIS/contracts/: BUILD_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOY_WITHOUT_CLI.md  GITHUB_ACTIONS_GUIDE.md  INSTALLATION_FIX.md  MACOS_BUILD_WORKAROUNDS.md  QUICK_START.md  RADIX_WALLET_DEPLOYMENT_GUIDE.md  README.md  STEP_BY_STEP_WALLET_DEPLOYMENT.md  WASM_FILE_STATUS.md  deploy.sh
Providers/Blockchain/NextGenSoftware.OASIS.API.Providers.RadixOASIS/contracts/src/: lib.rs  oasis_storage.rs
RWA/oracle/programs/rwa-oracle/: Anchor.toml  Cargo.toml  deploy-result.json  rwa-oracle-spec.json
RWA/oracle/programs/rwa-oracle/compiled-program/: payer-keypair.json  rust_main_template-keypair.json
RWA/oracle/programs/rwa-oracle/compiled-program/idl/: rwa_oracle.json
RWA/oracle/programs/rwa-oracle/generated-contract/: Anchor.toml
RWA/oracle/programs/rwa-oracle/generated-contract/programs/rust-main-template/src/: lib.rs
RWA/oracle/programs/rwa-oracle/src/: lib.rs
STAR ODK/NextGenSoftware.OASIS.STAR.WebUI/ClientApp/public/downloads/oasis-web4-rust-sdk/: Cargo.toml  README.md
STAR ODK/NextGenSoftware.OASIS.STAR.WebUI/ClientApp/public/downloads/oasis-web4-rust-sdk/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
(+6743 files in other folders)
