[package]
name = "dat-integration"
version = "0.1.0"
description = "Digital Asset Treasury Integration - SOL Staking + Asset Tokenization"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dat_integration"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"






