[package]
name = "oasis-storage"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "oasis_storage"

[dependencies]
scrypto = "1.3.0"
# Pin dependencies to avoid Rust 1.82+ requirements (Rust 1.81 compatibility for Scrypto)
base64ct = "<=1.7.3"
indexmap = "<=2.11.0"

[package.metadata.scrypto]
target = "wasm32-unknown-unknown"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1

