[package]
name = "rwa_oracle"
version = "0.1.0"
description = "RWA Oracle - Funding Rate On-Chain Publishing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

