[package]
name = "oasis-web4-client"
version = "1.0.0"
authors = ["NextGen Software <support@nextgensoftware.co.uk>"]
edition = "2021"
description = "Official Rust client for the OASIS Web4 API - Decentralized avatar management, karma system, and cross-provider data storage"
documentation = "https://docs.rs/oasis-web4-client"
readme = "README.md"
homepage = "https://oasis.network"
repository = "https://github.com/NextGenSoftwareUK/OASIS-API"
license = "MIT"
keywords = ["oasis", "web4", "decentralized", "blockchain", "holochain"]
categories = ["api-bindings", "web-programming", "cryptography"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"
